--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# .gitignore
+.env
+
+# Ignore the database configuration file
+config/database.yml
+
+# Ignore the logs directory
+logs/
+
+# Ignore all .log files
+*.log
+
+# Ignore a specific directory
+temp/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
