--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ pbr==6.1.0
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.6
+plotly==5.24.1
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 psutil==6.0.0
@@ -97,6 +98,7 @@ pyparsing==3.1.4
 pyqir==0.10.5
 pyspnego==0.11.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytket==1.33.0
 pytket-qir==0.13.0
@@ -125,13 +127,16 @@ soupsieve==2.6
 SQLAlchemy==2.0.35
 stack-data==0.6.3
 stevedore==5.3.0
+-e git+https://github.com/RobBEN93/QuantumExactCover-sudoku.git@7dbc89721d756fe9773bd4599300db6cc50f14d7#egg=sudoku_nisq
 sudoku-py==1.0.0
 symengine==0.11.0
 sympy==1.13.2
+tenacity==9.0.0
 terminado==0.18.1
 tinycss2==1.3.0
 tomli==2.0.1
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
 types-requests==2.32.0.20240914
