--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 comm==0.2.2
 contourpy==1.3.0
-cryptography==43.0.1
+cryptography>=44.0.1
 cycler==0.12.1
 debugpy==1.8.6
 decorator==5.1.1
@@ -39,7 +39,7 @@ ipython==8.27.0
 ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
-Jinja2==3.1.4
+jinja2>=3.1.5
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -134,7 +134,7 @@ tenacity==9.0.0
 terminado==0.18.1
 tinycss2==1.3.0
 tomli==2.0.1
-tornado==6.4.1
+tornado>=6.4.2
 tqdm==4.66.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
