--- a/requirements.txt
+++ b/requirements.txt
@@ -107,7 +107,7 @@ pytket-quantinuum==0.37.0
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
-qiskit==1.2.2
+qiskit>=1.3.0
 qiskit-aer==0.15.1
 qiskit-ibm-runtime==0.30.0
 qwasm==1.0.1
